fix layout, no scrollbar

--- a/src/components/Blackboard.css
+++ b/src/components/Blackboard.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  font-size: 4em;
+  font-size: 3.5em;
   color: white;
   background-color: black;
   text-align: center;
