--- a/src/components/parts/AddButtonRow.css
+++ b/src/components/parts/AddButtonRow.css
@@ -1,10 +1,10 @@
 .buttonContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  padding: 0.8em 2em;
+  justify-content: center;
 }
 
 .addButton {
   display: flex;
+  font-size: 0.8em;
 }
